<resources>
    <string name="app_name">KotlinHub</string>

    <!-- Bottom Menu Items  -->
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="fragment_home">Home Fragment</string>
    <string name="fragment_settings">Fragment Settings</string>
    <string name="fragment_explore">Fragment Explore</string>
    <string name="fragment_profile">Profile Fragment</string>


</resources>