<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_dashboard"
        android:orderInCategory="100"/>

    <item
        android:id="@+id/exploreFragment"
        android:title="@string/explore"
        android:icon="@drawable/ic_compass"
        android:orderInCategory="101" />

    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        android:orderInCategory="102"/>

    <item
        android:id="@+id/settingsFragment"
        android:title="@string/more"
        android:icon="@drawable/ic_settings2"
        android:orderInCategory="103"/>

</menu>