<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.kotlinhub.fragments.HomeFragment"
        android:label="@string/fragment_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/exploreFragment"
        android:name="com.example.kotlinhub.fragments.ExploreFragment"
        android:label="@string/fragment_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.kotlinhub.fragments.ProfileFragment"
        android:label="@string/fragment_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.kotlinhub.fragments.SettingsFragment"
        android:label="@string/fragment_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>